[gd_scene load_steps=3 format=3 uid="uid://71yp23gwxxj3"]

[ext_resource type="Script" path="res://Utility/GUI/item_option.gd" id="1_fdsda"]
[ext_resource type="Texture2D" uid="uid://dpwv1s40plone" path="res://Sprites/items/cat.png" id="2_82s54"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 50)
offset_right = 181.0
offset_bottom = 52.0
color = Color(0.439216, 0.517647, 0.337255, 1)
script = ExtResource("1_fdsda")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="HBox"]
texture_filter = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.415686, 0.415686, 0.415686, 1)

[node name="Icon" type="TextureRect" parent="HBox/ColorRect"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_82s54")
expand_mode = 3

[node name="VBox2" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBox2" type="HBoxContainer" parent="HBox/VBox2"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="Name" type="Label" parent="HBox/VBox2/HBox2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "name"

[node name="Level" type="Label" parent="HBox/VBox2/HBox2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Level: 1"

[node name="Description" type="Label" parent="HBox/VBox2"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
autowrap_mode = 3

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
